--- a/uDrive/uDrive.Core/App_Plugins/uDrive/settings.config
+++ b/uDrive/uDrive.Core/App_Plugins/uDrive/settings.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <uDrive>
-  <ClientId></ClientId>
+  <ClientId label="Client ID" description="This is the Client ID key from Google API">1234567</ClientId>
+  <Username label="Username" description="The username for Google Account">msinnott21</Username>
 </uDrive>
