--- a/uDrive/uDrive.Core/packages.config
+++ b/uDrive/uDrive.Core/packages.config
@@ -4,6 +4,10 @@
   <package id="ClientDependency" version="1.9.2" targetFramework="net47" />
   <package id="ClientDependency-Mvc5" version="1.8.0.0" targetFramework="net47" />
   <package id="Examine" version="0.1.85" targetFramework="net47" />
+  <package id="Google.Apis" version="1.29.2" targetFramework="net47" />
+  <package id="Google.Apis.Auth" version="1.29.2" targetFramework="net47" />
+  <package id="Google.Apis.Core" version="1.29.2" targetFramework="net47" />
+  <package id="Google.Apis.Drive.v3" version="1.29.2.995" targetFramework="net47" />
   <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net47" />
   <package id="ImageProcessor" version="2.5.3" targetFramework="net47" />
   <package id="ImageProcessor.Web" version="4.8.3" targetFramework="net47" />
@@ -34,6 +38,13 @@
   <package id="Owin" version="1.0" targetFramework="net47" />
   <package id="semver" version="1.1.2" targetFramework="net47" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net47" />
+  <package id="System.IO" version="4.3.0" targetFramework="net47" />
+  <package id="System.Net.Http" version="4.3.1" targetFramework="net47" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net47" />
   <package id="System.Threading.Tasks.Dataflow" version="4.7.0" targetFramework="net47" />
   <package id="UmbracoCms.Core" version="7.7.2" targetFramework="net47" />
 </packages>
