--- a/uDrive/uDrive.Core/packages.config
+++ b/uDrive/uDrive.Core/packages.config
@@ -6,6 +6,7 @@
   <package id="Examine" version="0.1.85" targetFramework="net47" />
   <package id="Google.Apis" version="1.29.2" targetFramework="net47" />
   <package id="Google.Apis.Auth" version="1.29.2" targetFramework="net47" />
+  <package id="Google.Apis.Auth.Mvc" version="1.29.2" targetFramework="net47" />
   <package id="Google.Apis.Core" version="1.29.2" targetFramework="net47" />
   <package id="Google.Apis.Drive.v3" version="1.29.2.995" targetFramework="net47" />
   <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net47" />
@@ -38,6 +39,7 @@
   <package id="Owin" version="1.0" targetFramework="net47" />
   <package id="semver" version="1.1.2" targetFramework="net47" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net47" />
+  <package id="Skybrud.Social" version="0.9.6.0" targetFramework="net47" />
   <package id="System.IO" version="4.3.0" targetFramework="net47" />
   <package id="System.Net.Http" version="4.3.1" targetFramework="net47" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net47" />
