--- a/uDrive/uDrive.Core/uDrive.Core.csproj
+++ b/uDrive/uDrive.Core/uDrive.Core.csproj
@@ -61,6 +61,9 @@
     <Reference Include="Google.Apis.Auth, Version=1.29.2.0, Culture=neutral, PublicKeyToken=4b01fa6e34db77ab, processorArchitecture=MSIL">
       <HintPath>..\packages\Google.Apis.Auth.1.29.2\lib\net45\Google.Apis.Auth.dll</HintPath>
     </Reference>
+    <Reference Include="Google.Apis.Auth.Mvc, Version=1.29.2.0, Culture=neutral, PublicKeyToken=4b01fa6e34db77ab, processorArchitecture=MSIL">
+      <HintPath>..\packages\Google.Apis.Auth.Mvc.1.29.2\lib\net45\Google.Apis.Auth.Mvc.dll</HintPath>
+    </Reference>
     <Reference Include="Google.Apis.Auth.PlatformServices, Version=1.29.2.0, Culture=neutral, PublicKeyToken=4b01fa6e34db77ab, processorArchitecture=MSIL">
       <HintPath>..\packages\Google.Apis.Auth.1.29.2\lib\net45\Google.Apis.Auth.PlatformServices.dll</HintPath>
     </Reference>
@@ -147,6 +150,9 @@
     </Reference>
     <Reference Include="Semver, Version=1.1.2.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\semver.1.1.2\lib\net451\Semver.dll</HintPath>
+    </Reference>
+    <Reference Include="Skybrud.Social, Version=0.9.6.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Skybrud.Social.0.9.6.0\lib\net40\Skybrud.Social.dll</HintPath>
     </Reference>
     <Reference Include="SQLCE4Umbraco, Version=1.0.6484.21648, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\UmbracoCms.Core.7.7.2\lib\net45\SQLCE4Umbraco.dll</HintPath>
@@ -248,9 +254,12 @@
   <ItemGroup>
     <Compile Include="Application\UmbracoStartup.cs" />
     <Compile Include="Constants\PackageConstants.cs" />
+    <Compile Include="Controllers\AuthCallbackController.cs" />
+    <Compile Include="Controllers\GoogleDriveApiController.cs" />
     <Compile Include="Controllers\SettingsApiController.cs" />
     <Compile Include="Controllers\UDriveController.cs" />
     <Compile Include="Controllers\UDriveTreeController.cs" />
+    <Compile Include="Helpers\AppFlowMetadata.cs" />
     <Compile Include="Helpers\TestData.cs" />
     <Compile Include="Models\SectionTreeNode.cs" />
     <Compile Include="Models\Setting.cs" />
@@ -270,6 +279,7 @@
     <Content Include="App_Plugins\uDrive\backOffice\uDriveTree\controllers\view.controller.js" />
     <Content Include="App_Plugins\uDrive\backOffice\uDriveTree\edit.html" />
     <Content Include="App_Plugins\uDrive\backOffice\uDriveTree\partials\settings.html" />
+    <Content Include="App_Plugins\uDrive\backOffice\uDriveTree\resources\settings.resource.js" />
     <Content Include="App_Plugins\uDrive\backOffice\uDriveTree\view.html" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
