--- a/uDrive/uDrive.Core/uDrive.Core.csproj
+++ b/uDrive/uDrive.Core/uDrive.Core.csproj
@@ -274,6 +274,7 @@
     <Content Include="App_Plugins\uDrive\backOffice\uDriveTree\partials\settings.html" />
     <Content Include="App_Plugins\uDrive\backOffice\uDriveTree\resources\settings.resource.js" />
     <Content Include="App_Plugins\uDrive\backOffice\uDriveTree\view.html" />
+    <Content Include="App_Plugins\uDrive\config\lang\en_GB.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\AutoMapper.3.3.1\tools\AutoMapper.targets" Condition="Exists('..\packages\AutoMapper.3.3.1\tools\AutoMapper.targets')" />
