Authenticate with Google

--- a/uDrive/uDrive.Site/App_Plugins/uDrive/settings.config
+++ b/uDrive/uDrive.Site/App_Plugins/uDrive/settings.config
@@ -1,5 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <uDrive>
-  <ClientId label="Client ID" description="This is the Client ID key from Google API">1234567</ClientId>
+  <ClientId label="Client ID" description="This is the Client ID key from Google API">217171030721-6k1gmu051hpr9lh151si890b260oskn1.apps.googleusercontent.com</ClientId>
+  <ClientSecret label="Client Secret" description="This is the Client Secret from the Google API">MsaSj36tVdR_tQV-LDQ92p_B</ClientSecret>
+  <RedirectUri label="Redirect URI" description="This is the redirect URI from the Google API">http://localhost:52323/App_Plugins/uDrive/backOffice/OAuthCallback.aspx</RedirectUri>
+  <RefreshToken label="Refresh Token" description="The refresh token used to acquire new access tokens. This is sensitive information">1/MviHHy9BCfO82o6rV-6rmOkOY1S7uY2FJBAViN7Ychi5HArioomYVERUmtOn3GXF</RefreshToken>
   <Username label="Username" description="The username for Google Account">msinnott21</Username>
 </uDrive>
