--- a/uDrive/uDrive.Site/packages.config
+++ b/uDrive/uDrive.Site/packages.config
@@ -40,6 +40,9 @@
   <package id="Owin" version="1.0" targetFramework="net47" />
   <package id="semver" version="1.1.2" targetFramework="net47" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net47" />
+  <package id="Skybrud.Essentials" version="1.0.8" targetFramework="net47" />
+  <package id="Skybrud.Social.Core" version="1.0.0-beta9" targetFramework="net47" />
+  <package id="Skybrud.Social.Google" version="1.0.0-beta002" targetFramework="net47" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net47" />
   <package id="System.Reflection.Metadata" version="1.0.21" targetFramework="net47" />
   <package id="System.Threading.Tasks.Dataflow" version="4.7.0" targetFramework="net47" />
