Google Auth almost done

--- a/uDrive/uDrive.Site/App_Plugins/uDrive/settings.config
+++ b/uDrive/uDrive.Site/App_Plugins/uDrive/settings.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <uDrive>
-  <ClientId label="Client ID" description="This is the Client ID key from Google API">217171030721-6k1gmu051hpr9lh151si890b260oskn1.apps.googleusercontent.com</ClientId>
-  <ClientSecret label="Client Secret" description="This is the Client Secret from the Google API">MsaSj36tVdR_tQV-LDQ92p_B</ClientSecret>
-  <RefreshToken label="Refresh Token" description="The refresh token used to acquire new access tokens. This is sensitive information">1/zgKYeimY8ZZRdVgxmwh1AvRI66mpmoxP1C8E77nHqwI</RefreshToken>
+  <ClientId label="Client ID" description="This is the Client ID key from Google API">217171030721-m905n52jb4trpipnvjvbvcu1qgcdmd41.apps.googleusercontent.com</ClientId>
+  <ClientSecret label="Client Secret" description="This is the Client Secret from the Google API">6CQYRo3HfcVR-c9DMXoO1LHS</ClientSecret>
+  <RefreshToken label="Refresh Token" description="The refresh token used to acquire new access tokens. This is sensitive information"></RefreshToken>
   <Username label="Username" description="The username for Google Account">msinnott21</Username>
 </uDrive>
