--- a/uDrive/uDrive.Auth/Web.config
+++ b/uDrive/uDrive.Auth/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=169433
@@ -60,4 +60,11 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+    <system.webServer>
+        <defaultDocument enabled="true">
+            <files>
+                <add value="OAuth.aspx" />
+            </files>
+        </defaultDocument>
+    </system.webServer>
 </configuration>
