--- a/uDrive/uDrive.Auth/uDrive.Auth.csproj
+++ b/uDrive/uDrive.Auth/uDrive.Auth.csproj
@@ -122,17 +122,23 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="OAuth.aspx" />
-    <Content Include="Static\css\umbraco.css" />
+    <Content Include="OAuth.aspx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Static\css\umbraco.css">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="OAuth.aspx.cs">
       <DependentUpon>OAuth.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
     <Compile Include="OAuth.aspx.designer.cs">
       <DependentUpon>OAuth.aspx</DependentUpon>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
