Add dll reference to test site

--- a/.gitignore
+++ b/.gitignore
@@ -222,3 +222,5 @@ uDrive/uDrive\.Site/App_Data/Models/
 uDrive/uDrive\.Site/App_Data/NuGetBackup/
 
 uDrive/uDrive\.Site/App_Data/TEMP/
+
+uDrive/uDrive\.Site/App_Plugins/
