--- a/uDrive/uDrive.Site/uDrive.Site.csproj
+++ b/uDrive/uDrive.Site/uDrive.Site.csproj
@@ -220,6 +220,9 @@
     <Reference Include="TidyNet, Version=1.0.0.0, Culture=neutral">
       <HintPath>..\packages\UmbracoCms.Core.7.7.2\lib\net45\TidyNet.dll</HintPath>
     </Reference>
+    <Reference Include="uDrive.Core">
+      <HintPath>..\..\libs\uDrive.Core.dll</HintPath>
+    </Reference>
     <Reference Include="umbraco, Version=1.0.6484.21648, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\UmbracoCms.Core.7.7.2\lib\net45\umbraco.dll</HintPath>
     </Reference>
