--- a/uDrive/uDrive.Site/config/trees.config
+++ b/uDrive/uDrive.Site/config/trees.config
@@ -36,4 +36,5 @@
   <!--<add application="myApplication" alias="myTree" title="Me Tree" type="MyNamespace.myTree, MyAssembly"
        iconClosed="icon-folder" iconOpen="icon-folder" sortOrder="10" />-->
   <add initialize="true" sortOrder="8" alias="contentBlueprints" application="settings" iconClosed="icon-folder" iconOpen="icon-folder-open" type="Umbraco.Web.Trees.ContentBlueprintTreeController, umbraco" />
+  <add initialize="true" sortOrder="0" alias="udriveTree" application="udrive" title="uDrive" iconClosed="icon-folder" iconOpen="icon-folder-open" type="uDrive.Core.Controllers.UDriveTreeController, uDrive.Core" />
 </trees>
