Fixing up install process. Adding fields for Files. UI WIP.

--- a/uDrive/uDrive.Auth/uDrive.Auth.csproj
+++ b/uDrive/uDrive.Auth/uDrive.Auth.csproj
@@ -166,6 +166,7 @@
           <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
         </WebProjectProperties>
       </FlavorProperties>
+      <UserProperties BuildVersion_DetectChanges="False" BuildVersion_IncrementBeforeBuild="False" BuildVersion_StartDate="2000/1/1" />
     </VisualStudio>
   </ProjectExtensions>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
