--- a/uDrive/uDrive.Core/App_Plugins/uDrive/settings.config
+++ b/uDrive/uDrive.Core/App_Plugins/uDrive/settings.config
@@ -2,6 +2,6 @@
 <uDrive>
   <ClientId label="Client ID" description="This is the Client ID key from Google API">217171030721-m905n52jb4trpipnvjvbvcu1qgcdmd41.apps.googleusercontent.com</ClientId>
   <ClientSecret label="Client Secret" description="This is the Client Secret from the Google API">6CQYRo3HfcVR-c9DMXoO1LHS</ClientSecret>
-  <RefreshToken label="Refresh Token" description="The refresh token used to acquire new access tokens. This is sensitive information">1/ysi2F4Log_WoNJAOpFeLJ7Q-Trx0h9_R5SMKWaAbFQQ</RefreshToken>
-  <Username label="Username" description="The username for Google Account">msinnott21</Username>
+  <RefreshToken label="Refresh Token" description="The refresh token used to acquire new access tokens. This is sensitive information">1/ZO6w69_Vvp3EHqApVviA_C_jopK_4KTDdK6VtCqkoPI</RefreshToken>
+  <Username label="Username" description="The username for Google Account"></Username>
 </uDrive>
