--- a/uDrive/uDrive.Core/uDrive.Core.csproj
+++ b/uDrive/uDrive.Core/uDrive.Core.csproj
@@ -256,14 +256,20 @@
     <Compile Include="App_Plugins\uDrive\backOffice\OAuthCallback.aspx.designer.cs">
       <DependentUpon>OAuthCallback.aspx.cs</DependentUpon>
     </Compile>
+    <Compile Include="Constants\GoogleDrive.cs" />
     <Compile Include="Constants\PackageConstants.cs" />
     <Compile Include="Controllers\GoogleDriveApiController.cs" />
     <Compile Include="Controllers\oAuthApiController.cs" />
     <Compile Include="Controllers\SettingsApiController.cs" />
     <Compile Include="Controllers\UDriveTreeController.cs" />
+    <Compile Include="Helpers\InstallHelper.cs" />
     <Compile Include="Helpers\TestData.cs" />
+    <Compile Include="Helpers\TranslationHelper.cs" />
     <Compile Include="Helpers\UDriveConfig.cs" />
+    <Compile Include="Helpers\UninstallHelper.cs" />
     <Compile Include="Models\Google\Client.cs" />
+    <Compile Include="Models\Google\Files\File.cs" />
+    <Compile Include="Models\Google\Files\AllFiles.cs" />
     <Compile Include="Models\Google\User\ExportFormats.cs" />
     <Compile Include="Models\Google\User\ImportFormats.cs" />
     <Compile Include="Models\Google\User\MaxImportSizes.cs" />
@@ -296,7 +302,7 @@
     <Content Include="App_Plugins\uDrive\backOffice\uDriveTree\resources\files.resource.js" />
     <Content Include="App_Plugins\uDrive\backOffice\uDriveTree\resources\settings.resource.js" />
     <Content Include="App_Plugins\uDrive\backOffice\uDriveTree\view.html" />
-    <Content Include="App_Plugins\uDrive\config\lang\en_GB.xml" />
+    <Content Include="App_Plugins\uDrive\config\lang\en.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\AutoMapper.3.3.1\tools\AutoMapper.targets" Condition="Exists('..\packages\AutoMapper.3.3.1\tools\AutoMapper.targets')" />
@@ -304,4 +310,9 @@
     <PostBuildEvent>xcopy "$(ProjectDir)App_Plugins\*.*" "$(SolutionDir)uDrive.Site/App_Plugins" /Y /E
 xcopy "$(TargetPath)" "$(SolutionDir)../libs" /Y /E</PostBuildEvent>
   </PropertyGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties BuildVersion_StartDate="2017/11/26" BuildVersion_UpdateFileVersion="True" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_BuildVersioningStyle="None.None.Increment.TimeStamp" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
